# Cpp_Utils

./: CMakeLists.txt  README.md  argParse_Readme.md
include/Utils/: Endian.h  FileIO.h  Logger.h  Memory.h  Reflection.h  Sockets.h  Strings.h  Time.h  Types.h  argparse.hpp  json.hpp  utf8.h
include/Utils/FileIO/: Read.h  Write.h
include/Utils/Memory/: Files.h  MemoryUtils.h  System.h
include/Utils/Sockets/: SocketClient.h  SocketServer.h  client.h
include/Utils/Strings/: Strings.h  stringOps.h
include/Utils/System/: Input.h
include/Utils/Types/: int24.h
include/Utils/Web/: WebRequests.h
src/Utils/: Logger.h
